# rag-chatbot-text-to-sql

./: app.py  ca.pem  pyproject.toml  requirements.txt
data/: doc_0.txt
src/: ingest.py  rag_chain.py  rag_chat_memory.py  retriever_test.py
src/text_to_sql/: db.py  schema_loader.py  sql_chain.py  sql_guard.py  sql_prompt.py
